@@ -55,7 +55,7 @@ class QueryWritingServiceImplTest {
     @DisplayName("상품으로 집필 조회 성공")
     void findByProduct() {
         // given
-        List<Writing> writings = Arrays.asList(
+        List<Writing> writings = List.of(
                 Writing.create(product, DummyAuthor.dummy("저자1", MemberDummy.dummyWithId(1L))),
                 Writing.create(product, DummyAuthor.dummy("저자2", null))
         );
